[package]
name = "vesta"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
indexmap = { version = "2.2.6", features = ["serde"] }
maud = { version = "0.26.0", features = ["axum"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
thiserror = "1.0.63"
tokio = { version = "1.39.1", features = ["rt-multi-thread"] }
toml = { version = "0.8.16", features = ["preserve_order"] }
tower-http = { version = "0.5.2", features = ["fs"] }
