[package]
name = "vesta"
version = "1.4.0"
edition = "2024"

resolver = "2"

[dependencies]
async-trait = "0.1.83"
axum = "0.8.4"
chrono = { version = "0.4.38", features = ["clock", "serde"], default-features = false }
indexmap = { version = "2.2.6", features = ["serde"] }
maud = { version = "0.27.0", features = ["axum"] }
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
sysinfo = "0.36.1"
thiserror = "2.0.12"
tokio = { version = "1.39.1", features = ["rt-multi-thread", "sync"] }
toml = { version = "0.9.5", features = ["preserve_order"] }
tower-http = { version = "0.6.6", features = ["fs"] }

[profile.release]
strip = true
opt-level = 2
lto = true
codegen-units = 1
